--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -64,18 +64,18 @@
     </div>
     <div class="col-md-8 order-md-1">
       <h4 class="mb-3">Shipping address</h4>
-      <form class="needs-validation" novalidate>
+      <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="firstName">First name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+            <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="" value="" required>
             <div class="invalid-feedback">
               Valid first name is required.
             </div>
           </div>
           <div class="col-md-6 mb-3">
             <label for="lastName">Last name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+            <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="" value="" required>
             <div class="invalid-feedback">
               Valid last name is required.
             </div>
@@ -83,16 +83,17 @@
         </div>
 
         <div class="mb-3">
-          <label for="email">Email <span class="text-muted">(Optional)</span></label>
-          <input type="email" class="form-control" id="email" placeholder="you@example.com">
-          <div class="invalid-feedback">
-            Please enter a valid email address for shipping updates.
-          </div>
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" formControlName="email" placeholder="you@example.com">
+            <div class="invalid-feedback">
+              Please enter a valid email address for shipping updates.
+            </div>
+
         </div>
 
         <div class="mb-3">
           <label for="address">Address</label>
-          <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+          <input type="text" class="form-control" id="address" formControlName="address" placeholder="1234 Main St" required>
           <div class="invalid-feedback">
             Please enter your shipping address.
           </div>
@@ -100,13 +101,13 @@
 
         <div class="mb-3">
           <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-          <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+          <input type="text" class="form-control" id="address2" formControlName="address2" placeholder="Apartment or suite">
         </div>
 
         <div class="row">
           <div class="col-md-5 mb-3">
             <label for="country">Country</label>
-            <select class="custom-select d-block w-100" id="country" required>
+            <select class="custom-select d-block w-100" id="country" formControlName="country" required>
               <option value="">Choose...</option>
               <option>United States</option>
             </select>
@@ -116,7 +117,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <label for="state">State</label>
-            <select class="custom-select d-block w-100" id="state" required>
+            <select class="custom-select d-block w-100" formControlName="state" id="state" required>
               <option value="">Choose...</option>
               <option value="">N/A</option>
 			<option value="AK">Alaska</option>
@@ -178,7 +179,7 @@
           </div>
           <div class="col-md-3 mb-3">
             <label for="zip">Zip</label>
-            <input type="text" class="form-control" id="zip" placeholder="" required>
+            <input type="text" class="form-control" id="zip" formControlName="zip" placeholder="" required>
             <div class="invalid-feedback">
               Zip code required.
             </div>
@@ -200,10 +201,10 @@
         </div>
 
         <ng-container *ngIf="(auth.user$ | async)?.cart.length > 0; else cantPay">
-          <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to payment</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="!checkoutForm.valid">Continue to payment</button>
         </ng-container>
         <ng-template #cantPay>
-          <button class="btn btn-primary btn-lg btn-block" type="submit" disabled>Continue to payment</button>
+          <button class="btn btn-primary btn-lg btn-block" disabled>Continue to payment</button>
         </ng-template>
         
         
