Added stripe payments

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,11 @@
 <div class="container mt-5">
     <h2>About Us</h2>
 
-    <p>As enthusiasts of crytocurrency, we developed a 3D printable wallet for ourselves. We thought it was pretty cool, and started a shop.</p>
+    <!-- <p>As enthusiasts of cryptocurrency, we developed a 3D printable wallet for ourselves. We thought it was pretty cool, and started a shop.</p> -->
 
-    <p>The we had an idea: what if we wrote an API and utalized Openscad to generate customaizeable CAD modles? People would be able to visit the site and customize whtir own version of the product and we could print it for them, or they could download the STL. That is how this site was born</p>
+    <p>The we had an idea: what if we wrote an API and utilized Openscad to generate customizable CAD models? People would be able to visit the site and customize their version of the product and we could print it for them, or they could download the STL. That is how this site was born</p>
+
+    <p>We started first with business cards because we had a cool design. We hope you like it as well!</p>
 
     <p>Thank your for visiting!</p>
 
