--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -21,20 +21,20 @@
       <br />
     </div>
     <div class="col-md-6 input">
-      <h3>The Bitprint Wallet Card</h3>
+      <h3>The Bitprint Business Card</h3>
       <p>by Bitprint</p>
       <hr />
       <h6>Price: <span class="text-success">$10.00</span></h6>
       <p>Free shipping!</p>
 
       <p class="mt-3">
-        A 3D printed cryptocurrency wallet card. Carry your cryto wallet in your
+        A 3D printed personal business card. Web presence in your
         physical wallet! <a href="">Learn more</a> about the card below.
       </p>
       <hr />
       <h4>Customize</h4>
       <p>
-        Enter your wallet receive address to be encoded in the QR code and name
+        Enter your web receive address to be encoded in the QR code and NFC tag and name
         or aliais to be marked on the bottom. Click the "Generate" button to
         preview your card.
       </p>
@@ -50,7 +50,7 @@
             class="form-control"
             aria-label="Sizing example input"
             aria-describedby="inputGroup-sizing-default"
-            placeholder="BTC address or URL"
+            placeholder="Web address"
             formControlName="address"
             #address
           />
