--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,29 +1,41 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-4 order-md-2 mb-4">
-
-        <ng-container *ngIf="auth.user$ | async as user">
-          <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-muted">Your cart</span>
-            <span class="badge badge-secondary badge-pill">{{user.cart.length}}</span>
-          </h4>
-          <ul class="list-group mb-3">
-
-          <ng-container *ngFor="let item of user.cart;">
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
+      <ng-container *ngIf="auth.user$ | async as user">
+        <h4 class="d-flex justify-content-between align-items-center mb-3">
+          <span class="text-muted">Your cart</span>
+          <span class="badge badge-secondary badge-pill">{{
+            user.cart.length
+          }}</span>
+        </h4>
+        <ul class="list-group mb-3">
+          <ng-container *ngFor="let item of user.cart">
+            <li
+              class="list-group-item d-flex justify-content-between lh-condensed"
+            >
               <div>
-                <h6 class="my-0">{{item.name}}</h6>
-                <a [href]="item.img"><small class="text-muted">View Card</small></a>
+                <h6 class="my-0">{{ item.name }}</h6>
+                <a [href]="item.img"
+                  ><small class="text-muted">View Card</small></a
+                >
               </div>
-              <span class="text-muted">${{item.cost}}</span>
-              <button type="button" class="close" aria-label="Close" (click)="removeItem(item)" *ngIf="user.paymentStatus != 'pending' && (auth.user$ | async)?.paymentStatus != 'created'">
+              <span class="text-muted">${{ item.cost }}</span>
+              <button
+                type="button"
+                class="close"
+                aria-label="Close"
+                (click)="removeItem(item)"
+                *ngIf="
+                  user.paymentStatus != 'pending' &&
+                  (auth.user$ | async)?.paymentStatus != 'created'
+                "
+              >
                 <span aria-hidden="true">&times;</span>
               </button>
             </li>
           </ng-container>
 
-
-                  <!-- <li class="list-group-item d-flex justify-content-between bg-light">
+          <!-- <li class="list-group-item d-flex justify-content-between bg-light">
           <div class="text-success">
             <h6 class="my-0">Promo code</h6>
             <small>EXAMPLECODE</small>
@@ -33,103 +45,151 @@
 
           <li class="list-group-item d-flex justify-content-between">
             <span>Total (USD)</span>
-            <strong>${{user.totalCost}}</strong>
+            <strong>${{ user.totalCost }}</strong>
           </li>
         </ul>
 
-
         <form class="card p-2">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Promo code">
+            <input type="text" class="form-control" placeholder="Promo code" />
             <div class="input-group-append">
               <button type="submit" class="btn btn-secondary">Redeem</button>
             </div>
           </div>
         </form>
-
       </ng-container>
-
-
-
-
-
-
 
       <ng-container *ngIf="isLoading">
         <div class="d-flex justify-content-center mt-5">
-          <div class="spinner-border" role="status" style="width: 100px; height: 100px;">
+          <div
+            class="spinner-border"
+            role="status"
+            style="width: 100px; height: 100px;"
+          >
             <span class="sr-only">Loading...</span>
           </div>
         </div>
       </ng-container>
-
-
-
     </div>
 
-
     <div class="col-md-8 order-md-1">
-
-      <ng-container *ngIf="(auth.user$ | async)?.paymentStatus == 'pending' || (auth.user$ | async)?.paymentStatus == 'created'; else noPayment">
+      <ng-container
+        *ngIf="
+          (auth.user$ | async)?.paymentStatus == 'pending' ||
+            (auth.user$ | async)?.paymentStatus == 'created';
+          else noPayment
+        "
+      >
         <div class="card">
           <div class="card-body">
             <h4 class="card-title">Your payment is pending...</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Complete your payment on the new tab.</h6>
-            <p class="card-text">We use Coinbase Commerce to process crypto payments. A link should have opened in a new tab to complete your purchace. If not, click below.</p>
-            <a [href]="(auth.user$ | async)?.paymentEndpoint.uri" target="_blank" class="card-link">Open payment</a>
+            <h6 class="card-subtitle mb-2 text-muted">
+              Complete your payment on the new tab.
+            </h6>
+            <p class="card-text">
+              We use Coinbase Commerce to process crypto payments. A link should
+              have opened in a new tab to complete your purchase. If not, click
+              below.
+            </p>
+            <a
+              [href]="(auth.user$ | async)?.paymentEndpoint.uri"
+              target="_blank"
+              class="card-link"
+              >Open payment</a
+            >
             <a (click)="cancelCharge()" class="card-link">Cancel payment</a>
           </div>
         </div>
-
       </ng-container>
 
       <ng-template #noPayment>
-        <ng-container *ngIf="(auth.user$ | async)?.cart.length > 0; else noCart">
+        <ng-container
+          *ngIf="(auth.user$ | async)?.cart.length > 0; else noCart"
+        >
           <h4 class="mb-3">Shipping address</h4>
           <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" formControlName="firstName" required>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="firstName"
+                  formControlName="firstName"
+                  required
+                />
                 <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="" value="" required>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="lastName"
+                  formControlName="lastName"
+                  placeholder=""
+                  value=""
+                  required
+                />
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
               </div>
             </div>
-    
+
             <div class="mb-3">
               <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" formControlName="email" placeholder="you@example.com">
-                <div class="invalid-feedback">
-                  Please enter a valid email address for shipping updates.
-                </div>
-    
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                formControlName="email"
+                placeholder="you@example.com"
+              />
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
             </div>
-    
+
             <div class="mb-3">
               <label for="address">Address</label>
-              <input type="text" class="form-control" id="address" formControlName="address" placeholder="1234 Main St" required>
+              <input
+                type="text"
+                class="form-control"
+                id="address"
+                formControlName="address"
+                placeholder="1234 Main St"
+                required
+              />
               <div class="invalid-feedback">
                 Please enter your shipping address.
               </div>
             </div>
-    
+
             <div class="mb-3">
-              <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input type="text" class="form-control" id="address2" formControlName="address2" placeholder="Apartment or suite">
+              <label for="address2"
+                >Address 2 <span class="text-muted">(Optional)</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="address2"
+                formControlName="address2"
+                placeholder="Apartment or suite"
+              />
             </div>
-    
+
             <div class="row">
               <div class="col-md-4 mb-3">
                 <label for="country">Country</label>
-                <select class="custom-select d-block w-100" id="country" formControlName="country" required>
+                <select
+                  class="custom-select d-block w-100"
+                  id="country"
+                  formControlName="country"
+                  required
+                >
                   <option value="">Choose...</option>
                   <option>United States</option>
                 </select>
@@ -139,7 +199,12 @@
               </div>
               <div class="col-md-3 mb-3">
                 <label for="state">State</label>
-                <select class="custom-select d-block w-100" formControlName="state" id="state" required>
+                <select
+                  class="custom-select d-block w-100"
+                  formControlName="state"
+                  id="state"
+                  required
+                >
                   <option value="">Choose...</option>
                   <option value="">N/A</option>
                   <option value="AK">Alaska</option>
@@ -201,57 +266,103 @@
               </div>
               <div class="col-md-3 mb-3">
                 <label for="city">City</label>
-                <input type="text" class="form-control" id="city" formControlName="city" placeholder="" required>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="city"
+                  formControlName="city"
+                  placeholder=""
+                  required
+                />
                 <div class="invalid-feedback">
                   City required.
                 </div>
               </div>
               <div class="col-md-2 mb-3">
                 <label for="zip">Zip</label>
-                <input type="text" class="form-control" id="zip" formControlName="zip" placeholder="" required>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="zip"
+                  formControlName="zip"
+                  placeholder=""
+                  required
+                />
                 <div class="invalid-feedback">
                   Zip code required.
                 </div>
               </div>
               <div class="form-check ml-3">
-                <input type="checkbox" class="form-check-input" id="agree" (change)="agree($event.target.checked)">
-                <label class="form-check-label" for="agree">I agree to the <a routerLink="/terms">Terms of Use</a>.</label>
+                <input
+                  type="checkbox"
+                  class="form-check-input"
+                  id="agree"
+                  (change)="agree($event.target.checked)"
+                />
+                <label class="form-check-label" for="agree"
+                  >I agree to the
+                  <a routerLink="/terms">Terms of Use</a>.</label
+                >
               </div>
             </div>
-            <hr class="mb-4">
-    
+            <hr class="mb-4" />
+
             <h4 class="mb-3">Payment</h4>
-    
+
             <div class="d-block my-3">
               <div class="custom-control custom-radio">
-                <input id="coinbase" type="radio" class="custom-control-input" value="coinbase" name="method" formControlName="method">
-                <label class="custom-control-label" for="coinbase">Crypto</label>
+                <input
+                  id="coinbase"
+                  type="radio"
+                  class="custom-control-input"
+                  value="coinbase"
+                  name="method"
+                  formControlName="method"
+                />
+                <label class="custom-control-label" for="coinbase"
+                  >Crypto</label
+                >
               </div>
               <div class="custom-control custom-radio">
-                <input id="stripe" type="radio" class="custom-control-input" value="stripe" name="method" formControlName="method">
-                <label class="custom-control-label" for="stripe">Credit card (Stripe)</label>
+                <input
+                  id="stripe"
+                  type="radio"
+                  class="custom-control-input"
+                  value="stripe"
+                  name="method"
+                  formControlName="method"
+                />
+                <label class="custom-control-label" for="stripe"
+                  >Credit card (Stripe)</label
+                >
               </div>
             </div>
 
-            <ng-container *ngIf="checkoutForm.valid && doesAgree; else btnDisabled">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to payment</button>
+            <ng-container
+              *ngIf="checkoutForm.valid && doesAgree; else btnDisabled"
+            >
+              <button class="btn btn-primary btn-lg btn-block" type="submit">
+                Continue to payment
+              </button>
             </ng-container>
             <ng-template #btnDisabled>
-              <button class="btn btn-primary btn-lg btn-block" type="submit" disabled>Continue to payment</button>
+              <button
+                class="btn btn-primary btn-lg btn-block"
+                type="submit"
+                disabled
+              >
+                Continue to payment
+              </button>
             </ng-template>
-  
           </form>
         </ng-container>
-  
+
         <ng-template #noCart>
           <ng-container *ngIf="!isLoading">
             <h4>Add some items to your cart! Trust us they are worth it!</h4>
           </ng-container>
         </ng-template>
       </ng-template>
-      
     </div>
   </div>
-
-
 </div>
