--- a/src/app/generate/generate.component.css
+++ b/src/app/generate/generate.component.css
@@ -23,6 +23,9 @@
     margin-top: 15px;
     margin-right: 15px;
   }
+  .description_image {
+    width: 300px;
+  }
 }
 
 @media only screen and (min-width: 920px) {
@@ -30,5 +33,9 @@
   .download,
   .generate {
     margin-left: 15px;
+  }
+
+  .description_image {
+    width: 400px;
   }
 }
