--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -125,8 +125,10 @@
           Add To Cart
         </button>
 
+        <br>
+        
         <a
-          class="btn btn-warning checkout"
+          class="btn btn-warning checkout mt-3 mr-3"
           routerLink="/checkout"
           *ngIf="user.cart.length > 0"
         >
@@ -135,7 +137,7 @@
       </ng-container>
 
       <button
-        class="btn btn-primary generate"
+        class="btn btn-secondary generate mt-3 mr-3"
         (click)="getStl(name.value, address.value)"
         *ngIf="(auth.user$ | async) && !isStlLoading"
       >
@@ -144,7 +146,7 @@
 
       <ng-container *ngIf="stlToDownload != null && stlToDownload != ''">
         <a
-          class="btn btn-warning download"
+          class="btn btn-secondary download mt-3 mr-3"
           [href]="stlToDownload"
           *ngIf="!isStlLoading"
         >
@@ -153,18 +155,16 @@
       </ng-container>
 
       <ng-container *ngIf="isStlLoading">
-        <div
-          class="spinner-border ml-5 stlLoading"
-          style="width: 3rem; height: 3rem;"
-          role="status"
-        >
-          <span class="sr-only">Loading...</span>
-        </div>
+        <button class="btn btn-secondary mt-3 mr-3" type="button" disabled>
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Download Stl
+        </button>
       </ng-container>
+
     </div>
   </div>
 
-  <h2> <a id="description">About the card</a></h2>
+  <h2> <a id="description mt-5">About the card</a></h2>
   This product is 3D printed in our facility using PLA filament and a .4 nozzle. See the features below.
   <hr>
 
