Fixed overlap in cover image
Fixed STL API endpoint

--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -36,7 +36,7 @@
       <p>
         Enter your web receive address to be encoded in the QR code and NFC tag and name
         or alias to be marked on the bottom. Click the "Generate" button to
-        preview your card.
+        <!-- preview your card. -->
       </p>
       <form class="picForm mt-3" [formGroup]="generateForm">
         <div class="input-group mb-3">
