--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -171,7 +171,7 @@
   <div class="row mt-5">
 
     <div class="col-md-6 text-right">
-      <img src="/assets/img/example_top.png" alt="" class="description_image">
+      <img src="/assets/img/final4.png" alt="" class="description_image">
     </div>
 
     <div class="col-md-6 mr">
@@ -185,7 +185,7 @@
   <div class="row mt-3">
 
     <div class="col-md-6 text-right">
-      <img src="/assets/img/nfc.png" alt="" width="200px">
+      <img src="/assets/img/nfc.png" alt="" class="description_image">
     </div>
 
     <div class="col-md-6 mr">
