--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -1,5 +1,6 @@
 
 <div class="container mt-5">
     <h2>Thank you for your purchace!</h2>
-    <p>You should have recived an email from us with your recipt.</p>
+    <p>We will be printing your order shortly!</p>
+    <p>You should have recived an email from us with your recipt. If you do not receive an email, please check your spam.</p>
 </div>
