Chyanged laguage and fixed stripeCheckout admin.firestore()

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -312,19 +312,6 @@
             <div class="d-block my-3">
               <div class="custom-control custom-radio">
                 <input
-                  id="coinbase"
-                  type="radio"
-                  class="custom-control-input"
-                  value="coinbase"
-                  name="method"
-                  formControlName="method"
-                />
-                <label class="custom-control-label" for="coinbase"
-                  >Crypto</label
-                >
-              </div>
-              <div class="custom-control custom-radio">
-                <input
                   id="stripe"
                   type="radio"
                   class="custom-control-input"
@@ -333,7 +320,20 @@
                   formControlName="method"
                 />
                 <label class="custom-control-label" for="stripe"
-                  >Credit card (Stripe)</label
+                  >Credit card</label
+                >
+              </div>
+              <div class="custom-control custom-radio">
+                <input
+                  id="coinbase"
+                  type="radio"
+                  class="custom-control-input"
+                  value="coinbase"
+                  name="method"
+                  formControlName="method"
+                />
+                <label class="custom-control-label" for="coinbase"
+                  >Cryptocurrency</label
                 >
               </div>
             </div>
