--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
   <div class="cover-container d-flex h-100 p-5 mt-5 mx-auto flex-column">
     
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">The First Customizable 3D Printed Business Card</h1>
-    <p class="lead mt-3">Share your web address with the printed QR code and the embeded NFC tag. Pay with crypto.</p>
+    <h1 class="cover-heading">The First Reusable 3D Printed Business Card</h1>
+    <p class="lead mt-3">Share your web address with the printed QR code and the embedded NFC tag. Fully customizable!</p>
     <p class="lead">
       <a routerLink="/generate" class="btn btn-lg btn-secondary mt-3">Get yours now!</a>
     </p>
