--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -28,14 +28,14 @@
       <p>Free shipping!</p>
 
       <p class="mt-3">
-        A 3D printed personal business card. Web presence in your
-        physical wallet! Learn more about the card below.
+        A 3D printed personal business card. Durable plastic makes it reusable and possible to keep your web presence in your
+        physical wallet. Learn more about the card below. <strong>Discount code available at checkout for multiple cards.</strong>
       </p>
       <hr />
       <h4>Customize</h4>
       <p>
-        Enter your web receive address to be encoded in the QR code and NFC tag and name
-        or alias to be marked on the bottom. Click the "Generate" button to
+        Enter your web address to be encoded in the QR code and NFC tag and name
+        or alias to be marked on the bottom. Click the "Generate" button to preview your card.
         <!-- preview your card. -->
       </p>
       <form class="picForm mt-3" [formGroup]="generateForm">
