--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -33,17 +33,32 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </li>
-
-            {{user.uid}}
           </ng-container>
 
-          <li class="list-group-item d-flex justify-content-between bg-light">
-            <div class="text-success">
-              <h6 class="my-0">Promo code</h6>
-              <small>EXAMPLECODE</small>
-            </div>
-            <span class="text-success">-$5</span>
-          </li>
+          <ng-container *ngFor="let promo of user.promos">
+            <li class="list-group-item d-flex justify-content-between bg-light">
+              <div class="text-success">
+                <h6 class="my-0">Promo code</h6>
+                <small>{{promo.code}}</small>
+              </div>
+              <span class="text-success">{{promo.displayDiscount}}</span>
+              <button
+              type="button"
+              class="close"
+              aria-label="Close"
+              (click)="removePromo(promo)"
+              *ngIf="
+                user.paymentStatus != 'pending' &&
+                (auth.user$ | async)?.paymentStatus != 'created'
+              "
+              >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            </li>
+          </ng-container>
+          
+
+
 
           <li class="list-group-item d-flex justify-content-between">
             <span>Total (USD)</span>
